--- a/BFE/vcode/src/pages/svelte.astro
+++ b/BFE/vcode/src/pages/svelte.astro
@@ -1,10 +1,12 @@
 ---
 import SvelteDemo from "../components/SvelteDemo.svelte";
+import styles from "../public/smui.css?url";
 ---
 
 <html>
   <head>
     <title>Svelte Demo</title>
+    <link rel="stylesheet" href={styles} />
   </head>
   <body>
     <h1>Svelte Demo</h1>
