--- a/astro-view-transition/src/pages/index.astro
+++ b/astro-view-transition/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import ViewTransitions from "astro/components/ViewTransitions.astro";
 ---
 
 <html lang="en">
@@ -8,8 +9,10 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
+		<ViewTransitions />
 	</head>
 	<body>
 		<h1>Astro</h1>
+		<a href="./about" transition:name="about">about</a>
 	</body>
 </html>
