--- a/hexagon/src/pages/index.astro
+++ b/hexagon/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import App from '../components/react/App';
 ---
 
-<Layout title="Welcome to Relm.">
+<Layout title="Welcome to Realm.">
 	<main>
 		<App client:only="react" />
 	</main>
@@ -22,5 +22,6 @@ import App from '../components/react/App';
 
 	.player {
 		position: absolute;
+		width: 240px;
 	}
 </style>
