--- a/mediapipe/mouse/src/pages/index.astro
+++ b/mediapipe/mouse/src/pages/index.astro
@@ -1,7 +1,3 @@
----
-
----
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -11,6 +7,26 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<div id="liveView" class="videoView">
+			<button id="webcamButton" class="mdc-button mdc-button--raised">
+				<span class="mdc-button__ripple"></span>
+				<span class="mdc-button__label">ENABLE WEBCAM</span>
+			</button>
+			<div style="position: relative;">
+				<video
+					id="webcam"
+					style="width: 1280px; height: 720px; position: abso"
+					autoplay
+					playsinline></video>
+				<canvas
+					class="output_canvas"
+					id="output_canvas"
+					width="1280"
+					height="720"
+					style="position: absolute; left: 0px; top: 0px;"></canvas>
+			</div>
+		</div>
+
+		<script src="../static/vision.ts"></script>
 	</body>
 </html>
